--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "jest": "^27.5.1"
-  }
+  },
+  "homepage": "https://Fatimahs2002.github.io/ToDoList"
 }
